kustomize/base/service-preview.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-spring-boot-preview
spec:
  selector:
    app: example-spring-boot
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
