kustomize/base/ingress-preview.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example-spring-boot-preview
spec:
  rules:
    - host: example-spring-boot-preview.crinfra.net
      http:
        paths:
          - backend:
              service:
                name: example-spring-boot-preview
                port:
                  number: 8080
            path: /
            pathType: Prefix
